hack to avoid overflow, should actually expand applicationDialog, gotta dig into the CSS when i have time

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -243,6 +243,7 @@ textarea:focus, input:focus {
 	margin-top: 8px;
 	margin-bottom: 8px;
 	text-align: left;
+	overflow: hidden;
 }
 
 .applicationFormMessage {
